# CARD_catalogue_beta

./: .gitignore  AD Data Initiative Published Datasets.xlsx  DEPLOYMENT.md  LICENSE  README.md  README_annotation.md  annotate_github_repos.py  annotate_github_repos_test.py  app.py  config.toml  continue_annotation_github.py  dataset-inventory-June_20_2025.tab  fix_github_data.py  github_repos-April_2025.tab  github_search_cli.py  github_summarizer.py  gits_to_reannotate.tsv  gits_to_reannotate_annotated.tsv  gits_to_reannotate_completed_20250626_120254.tsv  gits_to_reannotate_test_annotated.tsv  huggingface_models_20250620_142052.tab  huggingface_models_20250620_144322.tab  huggingface_search_cli.py  iNDI_inventory_20250620_122423.tab  notes_for_beta.txt  pilot_study_inventory-June_9_2025.tab.txt  pilot_study_inventory.tab  process_indi_data.py  prompt_testing.txt  pubmed_central-April_2025.tab  pubmed_search_cli.py  pyproject.toml  repositories_subset_20250418_170720.csv  requirements.txt  studies_subset_20250418_162202.csv  studies_to_add_revision-June_24_2025.tab  test_anthropic.py
.streamlit/: secrets.toml.example
iNDI_metadata/: IPSC Data 6-18-2025 13-15.xlsx  iNDI_notes.txt
