[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-catalogue"
version = "2.0.0"
description = "A FAIR browser for Alzheimer's disease studies with AI-powered insights"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "networkx>=3.2.1",
    "plotly>=5.18.0",
    "Pillow>=10.2.0",
    "scikit-learn>=1.4.0",
    "huggingface-hub>=0.20.3",
    "requests>=2.31.0",
    "anthropic>=0.55.0",
    "openpyxl>=3.1.2",
    "beautifulsoup4>=4.12.2",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/card-catalogue"
Repository = "https://github.com/yourusername/card-catalogue"
Issues = "https://github.com/yourusername/card-catalogue/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.toml"] 